[tool.poetry]
name = "read-a-script"
version = "0.1.0"
description = "Mac: Read a play script in various voices, to help with line learning."
authors = ["Neil Padgen <neil.padgen@gmail.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = ">=3.13"
readchar = ">=2.0.1"
Jouvence = ">=0.4.2"
docopt = ">=0.6.2"
"ruamel.yaml" = ">=0.16.12"
pyttsx3 = ">=2.90"
macos-speech = ">=1.1.0"
loguru = ">=0.7.2"
pyobjc-framework-quartz = ">=12.1"

[tool.poetry.group.dev.dependencies]
ipython = ">=8.10.0"
jupyter = ">=1.0.0"

[tool.poetry.scripts]
script-learner = "read_a_script.script_learner:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
